fix: ! set correct padding and gap in the MapAppHeader()

--- a/src/components/website/mapApp/MapAppHeader.scss
+++ b/src/components/website/mapApp/MapAppHeader.scss
@@ -12,7 +12,7 @@
 
         background-color: #000000;
 
-        padding: 13px 20px;
+        padding: 11px 20px;
 
         border: 1px solid #454545;
         border-radius: 10px;
@@ -21,7 +21,7 @@
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
-        gap: 20px;
+        gap: 8px;
     }
 
     .map-app-header-brand-logo {
